# Holdfast

./: AGENTS.md  Architecture.md  CLAUDE.md  README.md  docker-compose.yml
.claude/commands/: ddd-review.md  performance-review.md  secure-design-agent.md  security-review.md  testing-review.md
.github/workflows/: ci.yml
django-api/: .env.example  Dockerfile  pyproject.toml
django-api/config/: settings.py
django-api/events/: admin.py  apps.py  models.py  signals.py  urls.py
django-api/events/domain/: __init__.py  errors.py  models.py  value_objects.py
django-api/events/handlers/: __init__.py  serializers.py  views.py
django-api/events/services/: __init__.py  event_service.py
django-api/events/stores/: __init__.py  django_store.py  interfaces.py
django-api/tests/: conftest.py  test_cache.py  test_domain.py  test_event_catalog.py  test_services.py
django-api/tests/features/: event_catalog.feature
docs/prds/: 001-event-catalog-discovery.md  002-inventory-management.md  003-ticket-hold-system.md  004-order-checkout-system.md  005-messaging-event-infrastructure.md
